Replaced Monitor locking with AsyncLock
Monitor.Enter/Exit doesn't support an async/await flow

--- a/src/CacheTower/CacheTower.csproj
+++ b/src/CacheTower/CacheTower.csproj
@@ -9,4 +9,8 @@
     <Authors>James Turner</Authors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Nito.AsyncEx" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
