Updated benchmarking tests

--- a/tests/CacheTower.Benchmarks/CacheTower.Benchmarks.csproj
+++ b/tests/CacheTower.Benchmarks/CacheTower.Benchmarks.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem\CacheTower.Providers.FileSystem.csproj" />
     <ProjectReference Include="..\..\src\CacheTower\CacheTower.csproj" />
   </ItemGroup>
 
