Restructuring JSON provider references

--- a/tests/CacheTower.Benchmarks/CacheTower.Benchmarks.csproj
+++ b/tests/CacheTower.Benchmarks/CacheTower.Benchmarks.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem\CacheTower.Providers.FileSystem.csproj" />
+    <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem.Json\CacheTower.Providers.FileSystem.Json.csproj" />
     <ProjectReference Include="..\..\src\CacheTower\CacheTower.csproj" />
   </ItemGroup>
 
