--- a/src/CacheTower/CacheTower.csproj
+++ b/src/CacheTower/CacheTower.csproj
@@ -7,6 +7,7 @@
     <Description>A multi-layered caching system for .NET</Description>
     <PackageTags>$(PackageBaseTags)</PackageTags>
     <Authors>James Turner</Authors>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
