--- a/tests/CacheTower.Benchmarks/CacheTower.Benchmarks.csproj
+++ b/tests/CacheTower.Benchmarks/CacheTower.Benchmarks.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\CacheTower.Providers.Database.MongoDB\CacheTower.Providers.Database.MongoDB.csproj" />
     <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem.Json\CacheTower.Providers.FileSystem.Json.csproj" />
     <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem.Protobuf\CacheTower.Providers.FileSystem.Protobuf.csproj" />
     <ProjectReference Include="..\..\src\CacheTower\CacheTower.csproj" />
