--- a/src/CacheTower.Providers.Redis/CacheTower.Providers.Redis.csproj
+++ b/src/CacheTower.Providers.Redis/CacheTower.Providers.Redis.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="protobuf-net" Version="2.4.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.6.0" />
   </ItemGroup>
 
   <ItemGroup>
