--- a/tests/CacheTower.Tests/CacheTower.Tests.csproj
+++ b/tests/CacheTower.Tests/CacheTower.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\CacheTower.Extensions.RedisRemote\CacheTower.Extensions.RedisRemote.csproj" />
+    <ProjectReference Include="..\..\src\CacheTower.Extensions.Redis\CacheTower.Extensions.Redis.csproj" />
     <ProjectReference Include="..\..\src\CacheTower.Providers.Database.MongoDB\CacheTower.Providers.Database.MongoDB.csproj" />
     <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem.Json\CacheTower.Providers.FileSystem.Json.csproj" />
     <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem.Protobuf\CacheTower.Providers.FileSystem.Protobuf.csproj" />
