--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,7 +26,7 @@ deploy:
   
   - provider: NuGet
     server: https://nuget.pkg.github.com/TurnerSoftware/index.json
-    artifact: /.*nupkg/
+    artifact: /.*\.nupkg/
     skip_symbols: true
     username: TurnerSoftware
     api_key:
