--- a/src/CacheTower/CacheTower.csproj
+++ b/src/CacheTower/CacheTower.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Nito.AsyncEx" Version="5.0.0" />
+    <PackageReference Include="System.Buffers" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
