Added Akavache InMemory comparison

--- a/tests/CacheTower.AlternativesBenchmark/CacheTower.AlternativesBenchmark.csproj
+++ b/tests/CacheTower.AlternativesBenchmark/CacheTower.AlternativesBenchmark.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="akavache.core" Version="6.9.1" />
     <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
     <PackageReference Include="CacheManager.Core" Version="1.2.0" />
     <PackageReference Include="CacheManager.Microsoft.Extensions.Caching.Memory" Version="1.2.0" />
