--- a/tests/CacheTower.AlternativesBenchmark/CacheTower.AlternativesBenchmark.csproj
+++ b/tests/CacheTower.AlternativesBenchmark/CacheTower.AlternativesBenchmark.csproj
@@ -12,11 +12,16 @@
     <PackageReference Include="CacheManager.Microsoft.Extensions.Caching.Memory" Version="1.2.0" />
     <PackageReference Include="CacheManager.Serialization.ProtoBuf" Version="1.2.0" />
     <PackageReference Include="CacheManager.StackExchange.Redis" Version="1.2.0" />
+    <PackageReference Include="EasyCaching.Disk" Version="0.8.0" />
+    <PackageReference Include="EasyCaching.InMemory" Version="0.8.0" />
+    <PackageReference Include="EasyCaching.Redis" Version="0.8.0" />
+    <PackageReference Include="EasyCaching.Serialization.Protobuf" Version="0.8.0" />
     <PackageReference Include="MonkeyCache.FileStore" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem.Json\CacheTower.Providers.FileSystem.Json.csproj" />
+    <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem.Protobuf\CacheTower.Providers.FileSystem.Protobuf.csproj" />
     <ProjectReference Include="..\..\src\CacheTower.Providers.Redis\CacheTower.Providers.Redis.csproj" />
     <ProjectReference Include="..\..\src\CacheTower\CacheTower.csproj" />
   </ItemGroup>
