Prevent packing of benchmarking project

--- a/tests/CacheTower.AlternativesBenchmark/CacheTower.AlternativesBenchmark.csproj
+++ b/tests/CacheTower.AlternativesBenchmark/CacheTower.AlternativesBenchmark.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFrameworks>netcoreapp3.0</TargetFrameworks>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
