--- a/src/CacheTower.Providers.Database.MongoDB/CacheTower.Providers.Database.MongoDB.csproj
+++ b/src/CacheTower.Providers.Database.MongoDB/CacheTower.Providers.Database.MongoDB.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Title>MongoDB Provider for Cache Tower</Title>
+    <Description>Use MongoDB for caching with Cache Tower</Description>
+    <PackageTags>mongodb;$(PackageBaseTags)</PackageTags>
+    <Authors>James Turner</Authors>
   </PropertyGroup>
 
   <ItemGroup>
