--- a/src/CacheTower.Providers.FileSystem.Protobuf/CacheTower.Providers.FileSystem.Protobuf.csproj
+++ b/src/CacheTower.Providers.FileSystem.Protobuf/CacheTower.Providers.FileSystem.Protobuf.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Title>Protobuf File Provider for Cache Tower</Title>
+    <Description>Use Protobuf serialized files for caching with Cache Tower</Description>
+    <PackageTags>protobuf;filesystem;$(PackageBaseTags)</PackageTags>
+    <Authors>James Turner</Authors>
   </PropertyGroup>
 
   <ItemGroup>
