--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,8 +6,8 @@ services:
   - mongodb
 install:
   - choco install opencover.portable codecov
+  - choco install Memurai-Developer --version 2.0.0
   - ps: .\build\dotnet-install.ps1 -Version 3.0.100
-  - msiexec /i C:\projects\cachetower\build\Memurai-Developer-v2.0.0.msi /qn
   
 build_script:
   - ps: .\build.appveyor.ps1
