--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,10 +67,10 @@ jobs:
       run: choco install Memurai-Developer --version 2.0.0
     - name: Configure Ubuntu
       if: matrix.os == 'ubuntu-latest'
-      run: sudo systemctl start mongod
+      run: sudo systemctl start mongod ; sudo apt-get install redis-server
     - name: Configure MacOS
       if: matrix.os == 'macOS-latest'
-      run: brew services start mongodb-community
+      run: brew services start mongodb-community ; brew install redis
 
     - name: Checkout
       uses: actions/checkout@v2
