--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,7 +5,7 @@ skip_branch_with_pr: true
 services:
   - mongodb
 install:
-  - choco install Memurai-Developer --version 2.0.0
+  - choco install Memurai-Developer
   
 build_script:
   - ps: .\build.appveyor.ps1
