--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet --version && dotnet nuget list source && dotnet restore --verbosity normal
     - name: Build
       run: dotnet build -c Release --no-restore /p:Version=${{env.BUILD_VERSION}}
     - name: Test with Coverage
