--- a/src/CacheTower.Providers.Redis/CacheTower.Providers.Redis.csproj
+++ b/src/CacheTower.Providers.Redis/CacheTower.Providers.Redis.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CacheTower\CacheTower.csproj" />
+    <ProjectReference Include="..\CacheTower.Serializers.Protobuf\CacheTower.Serializers.Protobuf.csproj" />
   </ItemGroup>
 
 </Project>
