--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,8 +6,9 @@
     <PackageId>$(AssemblyName)</PackageId>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>icon.png</PackageIcon>
     <PackageProjectUrl>https://github.com/TurnerSoftware/CacheTower</PackageProjectUrl>
-    <PackageBaseTags>caching</PackageBaseTags>
+    <PackageBaseTags>caching;cache;multi-layer</PackageBaseTags>
 
     <!-- SourceLink Support -->
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -22,6 +23,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="TurnerSoftware.BuildVersioning" Version="0.3.0" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\images\$(PackageIcon)" Pack="true" PackagePath="/" />
   </ItemGroup>
 
 </Project>
