Fixing project references

--- a/src/CacheTower.Providers.Redis/CacheTower.Providers.Redis.csproj
+++ b/src/CacheTower.Providers.Redis/CacheTower.Providers.Redis.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CacheTower.Serializers.Protobuf\CacheTower.Serializers.Protobuf.csproj" />
     <ProjectReference Include="..\CacheTower\CacheTower.csproj" />
   </ItemGroup>
 
