--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,11 +41,10 @@ jobs:
     - name: Setup dotnet 3.1
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.x'
-    - name: Setup dotnet 5.0
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '5.0.x' 
+        dotnet-version: |
+          3.1.x
+          5.0.x
+          6.0.x
     - name: Install dependencies
       run: dotnet restore
     - name: Build
