--- a/benchmarks/CacheTower.AlternativesBenchmark/CacheTower.AlternativesBenchmark.csproj
+++ b/benchmarks/CacheTower.AlternativesBenchmark/CacheTower.AlternativesBenchmark.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem.Json\CacheTower.Providers.FileSystem.Json.csproj" />
     <ProjectReference Include="..\..\src\CacheTower.Providers.FileSystem.Protobuf\CacheTower.Providers.FileSystem.Protobuf.csproj" />
     <ProjectReference Include="..\..\src\CacheTower.Providers.Redis\CacheTower.Providers.Redis.csproj" />
+    <ProjectReference Include="..\..\src\CacheTower.Serializers.SystemTextJson\CacheTower.Serializers.SystemTextJson.csproj" />
     <ProjectReference Include="..\..\src\CacheTower\CacheTower.csproj" />
   </ItemGroup>
 
