--- a/src/CacheTower.Providers.FileSystem.Protobuf/CacheTower.Providers.FileSystem.Protobuf.csproj
+++ b/src/CacheTower.Providers.FileSystem.Protobuf/CacheTower.Providers.FileSystem.Protobuf.csproj
@@ -13,4 +13,9 @@
     <ProjectReference Include="..\CacheTower\CacheTower.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+    <PackageReference Update="TurnerSoftware.BuildVersioning" Version="0.4.0" />
+  </ItemGroup>
+
 </Project>
