--- a/src/CacheTower.Serializers.SystemTextJson/CacheTower.Serializers.SystemTextJson.csproj
+++ b/src/CacheTower.Serializers.SystemTextJson/CacheTower.Serializers.SystemTextJson.csproj
@@ -16,5 +16,10 @@
 		<ProjectReference Include="..\CacheTower\CacheTower.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+	  <PackageReference Update="TurnerSoftware.BuildVersioning" Version="0.4.0" />
+	</ItemGroup>
+
 </Project>
 
