Fix CI issues (#257)
* Uninstall existing mongodb-community on MacOS

* Specify full version to uninstall

* Update various test dependencies to fix next bug

* Bump to .NET 4.8

* Use older .NET 7 SDK

* Undo upgrade to .NET 4.8 testing

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,6 +65,7 @@ jobs:
       run: |
         brew tap mongodb/brew
         brew update
+        brew uninstall mongodb-community@5.0
         brew install mongodb-community@${{matrix.mongodb}}
         brew services start mongodb-community@${{matrix.mongodb}}
 
@@ -76,7 +77,7 @@ jobs:
       with:
         dotnet-version: |
           6.0.x
-          7.0.x
+          7.0.306
     - name: Install dependencies
       run: dotnet restore
     - name: Build
