--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,7 @@ jobs:
           - os: ubuntu-latest
             ubuntu: 'jammy'
           - os: macOS-latest
+            mongodb: '6.0'
             optional: true
     steps:
     # Configure Redis
@@ -61,7 +62,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: powershell
       run: |
-        $latestPackageVersion = Get-LatestChocoPackageVersion -TargetVersion ${{matrix.mongodb}} -PackageName "mongodb.install"
+        $latestPackageVersion = Resolve-ChocoPackageVersion -TargetVersion ${{matrix.mongodb}} -PackageName "mongodb.install"
         choco install mongodb.portable --version=$latestPackageVersion 
     - name: Configure MongoDB (MacOS)
       if: matrix.os == 'macOS-latest'
