--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,13 +25,18 @@ jobs:
   build:
     name: Build ${{matrix.os}}
     runs-on: ${{matrix.os}}
+    continue-on-error: ${{matrix.optional}}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, windows-latest]
         mongodb: ['6.0']
+        optional: [false]
         include:
           - os: ubuntu-latest
             ubuntu: 'jammy'
+          - os: macOS-latest
+            mongodb: '6.0'
+            optional: true
     steps:
     # Configure Redis
     - name: Configure Redis (Ubuntu)
@@ -57,15 +62,13 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: powershell
       run: |
-        choco uninstall mongodb mongodb.install
-        $latestPackageVersion = Get-LatestChocoPackageVersion -TargetVersion ${{matrix.mongodb}} -PackageName "mongodb.install"
+        $latestPackageVersion = Resolve-ChocoPackageVersion -TargetVersion ${{matrix.mongodb}} -PackageName "mongodb.install"
         choco install mongodb.portable --version=$latestPackageVersion 
     - name: Configure MongoDB (MacOS)
       if: matrix.os == 'macOS-latest'
       run: |
         brew tap mongodb/brew
         brew update
-        brew uninstall mongodb-community@5.0
         brew install mongodb-community@${{matrix.mongodb}}
         brew services start mongodb-community@${{matrix.mongodb}}
 
